--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,13 +9,13 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...          
-      - docker build -t python_app:latest .
-      - docker tag python_app:latest 994617978174.dkr.ecr.us-east-2.amazonaws.com/python_app:latest
+      - docker build -t python_app .
+      - docker tag python_app:latest 774305593371.dkr.ecr.us-east-1.amazonaws.com/python_app:latest
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push 994617978174.dkr.ecr.us-east-2.amazonaws.com/python_app:latest
+      - docker push 774305593371.dkr.ecr.us-east-1.amazonaws.com/python_app:latest
       - echo Writing Image Definitions file...
       - printf '[{"name":"Container-app-python","imageUri":"994617978174.dkr.ecr.us-east-2.amazonaws.com/python_app:latest"}]' > imagedefinitions.json
       - printf '{"ImageURI":"994617978174.dkr.ecr.us-east-2.amazonaws.com/python_app:latest"}' > imageDetail.json
